--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -194,10 +194,10 @@ S_B_7 : "sᴏᴜꝛᴄᴇ"
 S_B_8 : "ʏᴏᴜ-ᴛᴜʙᴇ"
 S_B_9 : "sᴜᴘᴘᴏꝛᴛ"
 
-H_B_1 : "⬤ ᴀᴅᴍɪɴ ⬤"
-H_B_2 : "⬤ ᴀᴜᴛʜ ⬤"
-H_B_3 : "⬤ ʙʀᴏᴀᴅᴄᴀsᴛ ⬤"
-H_B_4 : "⬤ ʙʟ-ᴄʜᴀᴛ ⬤"
+H_B_1 : "● ᴀᴅᴍɪɴ ●"
+H_B_2 : "● ᴀᴜᴛʜ ●"
+H_B_3 : "● ʙʀᴏᴀᴅᴄᴀsᴛ ●"
+H_B_4 : "● ʙʟ-ᴄʜᴀᴛ ●"
 H_B_5 : "⬤ ʙʟ-ᴜsᴇʀ ⬤"
 H_B_6 : "⬤ ᴄ-ᴘʟᴀʏ ⬤"
 H_B_7 : "⬤ ɢ-ʙᴀɴ ⬤"
