--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -194,30 +194,30 @@ S_B_7 : "🌺 𝐒ᴏᴜʀᴄᴇ 🌺"
 S_B_8 : "📺 ʏᴏᴜ-ᴛᴜʙᴇ 📺"
 S_B_9 : "🍬 sᴜᴘᴘᴏꝛᴛ 🍬"
 
-H_B_1 : "ᴧᴅᴍɪɴ"
-H_B_2 : "ᴧᴜᴛʜ"
-H_B_3 : "ɢ-ᴄᴧsᴛ"
-H_B_4 : "ʙʟ-ᴄʜᴧᴛ"
-H_B_5 : "ʙʟ-ᴜsᴇʀs"
-H_B_6 : "ᴄ-ᴘʟᴧʏ"
-H_B_7 : "ɢ-ʙᴧɴ"
-H_B_8 : "ʟᴏᴏᴘ"
-H_B_9 : "ʟᴏɢ"
-H_B_10 : "ᴘɪɴɢ"
-H_B_11 : "ᴘʟᴀʏ"
-H_B_12 : "sʜᴜғғʟᴇ"
-H_B_13 : "sᴇᴇᴋ"
-H_B_14 : "sᴏɴɢ"
-H_B_15 : "sᴘᴇᴇᴅ"
-H_B_16 : "ɢᴘᴛ"
-H_B_17 : "sᴛɪᴄᴋᴇʀ"
-H_B_18 : "ᴛᴀɢ-ᴀʟʟ"
-H_B_19 : "ɪɴғᴏ"
-H_B_20 : "ɢʀᴏᴜᴘ"
-H_B_21 : "ᴇxᴛʀᴀ"
-H_B_22 : "ɪᴍᴀɢᴇ"
-H_B_23 : "ᴀᴄᴛɪᴏɴ"
-H_B_24 : "sᴇᴀʀᴄʜ"
+H_B_1 : "• ᴧᴅᴍɪɴ •"
+H_B_2 : "• ᴧᴜᴛʜ •"
+H_B_3 : "• ɢ-ᴄᴧsᴛ •"
+H_B_4 : "• ʙʟ-ᴄʜᴧᴛ •"
+H_B_5 : "• ʙʟ-ᴜsᴇʀs •"
+H_B_6 : "• ᴄ-ᴘʟᴧʏ •"
+H_B_7 : "• ɢ-ʙᴧɴ •"
+H_B_8 : "• ʟᴏᴏᴘ •"
+H_B_9 : "• ʟᴏɢ •"
+H_B_10 : "• ᴘɪɴɢ •"
+H_B_11 : "• ᴘʟᴀʏ •"
+H_B_12 : "• sʜᴜғғʟᴇ •"
+H_B_13 : "• sᴇᴇᴋ •"
+H_B_14 : "• sᴏɴɢ •"
+H_B_15 : "• sᴘᴇᴇᴅ •"
+H_B_16 : "• ɢᴘᴛ •"
+H_B_17 : "• sᴛɪᴄᴋᴇʀ •"
+H_B_18 : "• ᴛᴀɢ-ᴀʟʟ •"
+H_B_19 : "• ɪɴғᴏ •"
+H_B_20 : "• ɢʀᴏᴜᴘ •"
+H_B_21 : "• ᴇxᴛʀᴀ •"
+H_B_22 : "• ɪᴍᴀɢᴇ •"
+H_B_23 : "• ᴀᴄᴛɪᴏɴ •"
+H_B_24 : "• sᴇᴀʀᴄʜ •"
 
 P_B_1 : "ᴀᴜᴅɪᴏ"
 P_B_2 : "ᴠɪᴅᴇᴏ"
