--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -184,15 +184,15 @@ NEXT_PAGE: ">"
 BACK_PAGE: "<"
 
 
-S_B_1 : "⛩️ ᴧᴅᴅ мᴇ ʙᴧʙʏ ⛩️"
-S_B_2 : "🌪️ sᴜᴘᴘᴏꝛᴛ 🌪️"
-S_B_3 : "⛩️ ᴧᴅᴅ мᴇ ʙᴧʙʏ ⛩️"
-S_B_4 : "🏩 ʜᴇʟᴘ ᴧиᴅ ᴄᴏᴍᴍᴧɴᴅs 🏩"
-S_B_5 : "❄️ ❍ᴡɴᴇꝛ ❄️"
-S_B_6 : "🍹 𝐔ᴘᴅᴀᴛᴇ 🍹"
-S_B_7 : "🌺 𝐒ᴏᴜʀᴄᴇ 🌺"
-S_B_8 : "📺 ʏᴏᴜ-ᴛᴜʙᴇ 📺"
-S_B_9 : "🍬 sᴜᴘᴘᴏꝛᴛ 🍬"
+S_B_1 : "❍ ᴧᴅᴅ мᴇ ʙᴧʙʏ ❍"
+S_B_2 : "˹ sᴜᴘᴘᴏꝛᴛ ˼"
+S_B_3 : "❍ ᴧᴅᴅ мᴇ ʙᴧʙʏ ❍"
+S_B_4 : "❍ ʜᴇʟᴘ ᴧиᴅ ᴄᴏᴍᴍᴧɴᴅs ❍"
+S_B_5 : "˹ ❍ᴡɴᴇꝛ ˼"
+S_B_6 : "˹ 𝐔ᴘᴅᴀᴛᴇ ˼"
+S_B_7 : "˹ 𝐒ᴏᴜʀᴄᴇ ˼"
+S_B_8 : "˹ ʏᴏᴜ-ᴛᴜʙᴇ ˼"
+S_B_9 : "˹ sᴜᴘᴘᴏꝛᴛ ˼"
 
 H_B_1 : "• ᴧᴅᴍɪɴ •"
 H_B_2 : "• ᴧᴜᴛʜ •"
